--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
     <!-- MAIN -->
     <main class="main">
+        <!-- HERO-SECTION -->
         <section class="hero-section">
             <div class="container">
                 <div class="hero-text-img">
@@ -41,6 +42,21 @@
                     <div class="hero-img"> 
                         <img class="hero-laptop-img" src="img/laptop.svg" alt="laptop" height="385" width="578" >
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- CONTACT-SECTION -->
+        <section class="contact">
+            <div class="container">
+                <div class="contact-section">
+                    <p class="contact-info"> <span class="number">35,000+</span>ALREADY JOINED</p>
+                    <h2 class="contact-text">Stay up-to-date with what
+                        we’re doing</h2>
+                        <div>
+                            <input class="input-email" type="email" name="" id="email" placeholder="Enter your email address" aria-placeholder="Enter your email address">
+                            <button class="button nav-button contact-button" type="submit">Contact us</button>
+                        </div>
                 </div>
             </div>
         </section>
