--- a/index.html
+++ b/index.html
@@ -46,6 +46,79 @@
             </div>
         </section>
 
+            <!-- FEATURES -->
+        <section class="features">
+            <div class="container">
+                <h2 class="fauters-title"> Features</h2>
+                <p class="fatures-text">Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access them on the go.</p>
+                <div class="tabheader-items">
+                    <div class="tabheader-item tabheader-item-active">Simple Bookmarking</div>
+                    <div class="tabheader-item">Speedy Searching</div>
+                    <div class="tabheader-item">Easy Sharing</div>
+                </div>
+                <div class="tabcontainer">
+                    <div class="tabcontent">
+                        <img class="tabcontent-img" src="img/oneclick.svg" alt="">
+                        <div class="tabcontent-text">
+                            <h3 class="tabcontent-title">Bookmark in one click</h3>
+                            <p class="tabcontent-info">Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.</p>
+                            <button class="button primary-btn tabcontent-button">More Info</button>
+                        </div>
+                    </div>
+                    <div class="tabcontent">
+                        <img class="tabcontent-img" src="img/search.svg" alt="">
+                        <div class="tabcontent-text">
+                            <h3 class="tabcontent-title">Intelligent search</h3>
+                            <p class="tabcontent-info">Our powerful search feature will help you find saved sites in no time at all. No need to trawl through all of your bookmarks.</p>
+                            <button class="button primary-btn tabcontent-button">More Info</button>
+                        </div>
+                    </div>
+                    <div class="tabcontent">
+                        <img class="tabcontent-img" src="img/yourbookmark.svg" alt="">
+                        <div class="tabcontent-text">
+                            <h3 class="tabcontent-title">Share your bookmarks</h3>
+                            <p class="tabcontent-info">Easily share your bookmarks and collections with others. Create a shareable link that you can send at the click of a button.</p>
+                            <button class="button primary-btn tabcontent-button">More Info</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- EXTENSION -->
+        <section class="extension">
+            <div class="container">
+                <h2 class="extension-head">Download the extension</h2>
+                <p class="extension-text">We’ve got more browsers in the pipeline. Please do let us know if you’ve got a favourite you’d like us to prioritize.</p>
+                <div class="extension-cards">
+                    <div class="extension-card">
+                        <div class="extension-card-items">
+                            <a href=""><img class="extension-img" src="img/chrome 2.svg" alt=""></a>
+                            <h3 class="extension-title">Add to Chrome</h3>
+                            <span class="extension-version"> Minimum version 62</span>
+                            <button class="button primary-btn extension-btn">Add & Install Extension</button>
+                        </div>
+                    </div>
+                    <div class="extension-card">
+                        <div class="extension-card-items">
+                            <a class="extension-card-img-link" href=""><img class="extension-img" src="img/firefox.svg" alt=""></a>
+                            <h3 class="extension-title">Add to Firefox</h3>
+                            <span class="extension-version">Minimum version 55</span>
+                            <button class="button primary-btn extension-btn">Add & Install Extension</button>
+                        </div>
+                    </div>
+                    <div class="extension-card">
+                        <div class="extension-card-items">
+                            <a href=""><img class="extension-img" src="img/opera.svg" alt=""></a>
+                            <h3 class="extension-title">Add to Opera</h3>
+                            <span class="extension-version">Minimum version 46</span>
+                            <button class="button primary-btn extension-btn">Add & Install Extension</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- CONTACT-SECTION -->
         <section class="contact">
             <div class="container">
@@ -79,5 +152,7 @@
             </div>
         </div>
     </footer>
+
+    <script src="app.js"></script>
 </body>
 </html>
